# ZetaRF

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  ZetaRF.cpp  ZetaRF.h  ZetaRF_config.h  keywords.txt  library.json  library.properties  radio_config.h  si4455_defs.h  si4455_revb1_bidir_crc.xml  si4455_revb1_bidir_crc_vl.xml  si4455_revb1_bidir_fixed_crc_pre10_sync4_pay8.xml  si4455_revb1_bidir_fixed_crc_pre10_sync4_pay8_433mhz.xml  si4455_revb1_bidir_fixed_crc_pre10_sync4_pay8_915mhz.xml  si4455_revb1_bidir_vl_crc_pre10_sync4_pay8.xml  si4455_revb1_bidir_vl_crc_pre10_sync4_pay8_433mhz.xml  si4455_revb1_bidir_vl_crc_pre10_sync4_pay8_868mhz.xml  si4455_revb1_bidir_vl_crc_pre10_sync4_pay8_915mhz.xml  si4463_revb1_bidir_fixed_crc_pre10_sync4_pay8_433mhz.xml  si4463_revb1_bidir_fixed_crc_pre10_sync4_pay8_868mhz.xml  si4463_revb1_bidir_fixed_crc_pre10_sync4_pay8_868mhz_256kbps.xml  si4463_revb1_variablelength_50kbps_crc_whitening_longrange_868mhz.xml
configs/: radio_config_500kbps.h  radio_config_fixed_crc_pre10_sync4_pay8.h  radio_config_fixed_crc_pre10_sync4_pay8_433mhz.h  radio_config_vl.h  radio_config_vl_500kbps.h  radio_config_vl_crc_pre10_sync4_pay8_433mhz.h
examples/rpi/: CMakeLists.txt
examples_raspberrypi/: CMakeLists.txt
examples_raspberrypi/SimpleRx/: SimpleRx.cpp
examples_raspberrypi/SimpleRxVariableLength/: SimpleRxVariableLength.cpp
src/: CMakeLists.txt  ZetaRF.cpp  ZetaRF.h  ZetaRf.cpp  ZetaRf.hpp  ezradio_si4455.h  ezradio_si4455.hpp  ezradio_si4455_defs.h  ezradiopro_si446x.h  ezradiopro_si446x.hpp  ezradiopro_si446x_defs.h  flagset.hpp  si4455_defs.h  zetarf_arduino_spi_hal.h  zetarf_arduino_spi_hal.hpp  zetarf_hal.h  zetarf_hal.hpp  zetarf_radio.h  zetarf_radio.hpp  zetarf_rpi_spi_hal.h  zetarf_rpi_spi_hal.hpp
(+47 files in other folders)
